--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -80,17 +80,32 @@ jobs:
             echo "VERSION=dev" >> $GITHUB_ENV
           fi
       - name: Install Android NDK
+        id: setup-ndk
         uses: nttld/setup-ndk@v1
         with:
-          ndk-version: r26d
+          ndk-version: r28b
+      - name: Export Android NDK environment
+        run: |
+          NDK_PATH="${ANDROID_NDK_LATEST_HOME:-${ANDROID_NDK_HOME:-${ANDROID_NDK_ROOT:-}}}"
+          if [[ -z "${NDK_PATH}" ]]; then
+            echo "Android NDK path not found after setup-ndk" >&2
+            exit 1
+          fi
+          echo "ANDROID_NDK_HOME=${NDK_PATH}" >> "$GITHUB_ENV"
+          echo "ANDROID_NDK_ROOT=${NDK_PATH}" >> "$GITHUB_ENV"
       - name: Install Rust Android targets
         run: |
           rustup target add aarch64-linux-android armv7-linux-androideabi x86_64-linux-android
       - name: Build Android shared libs
+        env:
+          RUSTFLAGS: -C link-arg=-Wl,-z,max-page-size=16384
         run: |
-          cargo install cargo-ndk --version 3.5.4
+          cargo install cargo-ndk --locked --version 3.5.4
           cd rust
           cargo ndk -t arm64-v8a -t armeabi-v7a -t x86_64 -o ../dist/madmom-beats-port-${VERSION}/android build -p rhythm_ffi --release
+      - name: Verify Android ELF 16 KB page-size compatibility
+        run: |
+          tools/verify_16kb_android.sh dist/madmom-beats-port-${VERSION}/android
       - name: Collect Android artifacts
         run: |
           cp rust/rhythm_ffi/include/rhythm.h dist/madmom-beats-port-${VERSION}/android/
