--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -46,15 +46,29 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - name: Install Android NDK
+        id: setup-ndk
         uses: nttld/setup-ndk@v1
         with:
-          ndk-version: r26d
+          ndk-version: r28b
+      - name: Export Android NDK environment
+        run: |
+          NDK_PATH="${ANDROID_NDK_LATEST_HOME:-${ANDROID_NDK_HOME:-${ANDROID_NDK_ROOT:-}}}"
+          if [[ -z "${NDK_PATH}" ]]; then
+            echo "Android NDK path not found after setup-ndk" >&2
+            exit 1
+          fi
+          echo "ANDROID_NDK_HOME=${NDK_PATH}" >> "$GITHUB_ENV"
+          echo "ANDROID_NDK_ROOT=${NDK_PATH}" >> "$GITHUB_ENV"
       - name: Add Android targets
         run: rustup target add aarch64-linux-android armv7-linux-androideabi x86_64-linux-android
       - name: Install cargo-ndk
         run: cargo install cargo-ndk --locked --version 3.5.4
       - name: Build Android FFI libs
+        env:
+          RUSTFLAGS: -C link-arg=-Wl,-z,max-page-size=16384
         run: |
           cd rust
           cargo ndk -t arm64-v8a -t armeabi-v7a -t x86_64 -o ../dist/ci-android \
             build -p rhythm_ffi --release
+      - name: Verify Android ELF 16 KB page-size compatibility
+        run: tools/verify_16kb_android.sh dist/ci-android
