--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,13 +1,13 @@
 [workspace]
 resolver = "2"
 members = [
-  "rhythm_core",
-  "rhythm_ffi",
-  "rhythm_wasm",
+  "madmom_beats_port_core",
+  "madmom_beats_port_ffi",
+  "madmom_beats_port_wasm",
 ]
 
 [workspace.package]
-version = "3.0.0"
+version = "4.0.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
