--- a/rust/madmom_beats_port_core/Cargo.toml
+++ b/rust/madmom_beats_port_core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rhythm_core"
+name = "madmom_beats_port_core"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
