--- a/rust/madmom_beats_port_wasm/Cargo.toml
+++ b/rust/madmom_beats_port_wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rhythm_wasm"
+name = "madmom_beats_port_wasm"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -13,4 +13,4 @@ serde-wasm-bindgen = "0.6"
 js-sys = "0.3"
 serde.workspace = true
 serde_json.workspace = true
-rhythm_core = { path = "../rhythm_core" }
+madmom_beats_port_core = { path = "../madmom_beats_port_core" }
