--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -24,13 +24,13 @@ jobs:
           fi
       - name: Build wasm
         run: |
-          cd rust/rhythm_wasm
+          cd rust/madmom_beats_port_wasm
           curl -sSf https://rustwasm.github.io/wasm-pack/installer/init.sh | sh
           wasm-pack build --target web
       - name: Collect wasm artifacts
         run: |
           mkdir -p dist/madmom-beats-port-${VERSION}/wasm
-          cp -R rust/rhythm_wasm/pkg/* dist/madmom-beats-port-${VERSION}/wasm/
+          cp -R rust/madmom_beats_port_wasm/pkg/* dist/madmom-beats-port-${VERSION}/wasm/
           cp -R models dist/madmom-beats-port-${VERSION}/wasm/models
       - uses: actions/upload-artifact@v4
         with:
@@ -53,14 +53,14 @@ jobs:
         run: |
           rustup target add aarch64-apple-ios x86_64-apple-ios
           cd rust
-          cargo build -p rhythm_ffi --release --target aarch64-apple-ios
-          cargo build -p rhythm_ffi --release --target x86_64-apple-ios
+          cargo build -p madmom_beats_port_ffi --release --target aarch64-apple-ios
+          cargo build -p madmom_beats_port_ffi --release --target x86_64-apple-ios
       - name: Collect iOS artifacts
         run: |
           mkdir -p dist/madmom-beats-port-${VERSION}/ios
-          cp rust/target/aarch64-apple-ios/release/librhythm_ffi.a dist/madmom-beats-port-${VERSION}/ios/librhythm_ffi_arm64.a
-          cp rust/target/x86_64-apple-ios/release/librhythm_ffi.a dist/madmom-beats-port-${VERSION}/ios/librhythm_ffi_x86_64.a
-          cp rust/rhythm_ffi/include/rhythm.h dist/madmom-beats-port-${VERSION}/ios/
+          cp rust/target/aarch64-apple-ios/release/libmadmom_beats_port_ffi.a dist/madmom-beats-port-${VERSION}/ios/libmadmom_beats_port_ffi_arm64.a
+          cp rust/target/x86_64-apple-ios/release/libmadmom_beats_port_ffi.a dist/madmom-beats-port-${VERSION}/ios/libmadmom_beats_port_ffi_x86_64.a
+          cp rust/madmom_beats_port_ffi/include/madmom_beats_port.h dist/madmom-beats-port-${VERSION}/ios/
           cp -R models dist/madmom-beats-port-${VERSION}/ios/models
       - uses: actions/upload-artifact@v4
         with:
@@ -98,17 +98,17 @@ jobs:
           rustup target add aarch64-linux-android armv7-linux-androideabi x86_64-linux-android
       - name: Build Android shared libs
         env:
-          RUSTFLAGS: -C link-arg=-Wl,-z,max-page-size=16384 -C link-arg=-Wl,-soname,librhythm_ffi.so
+          RUSTFLAGS: -C link-arg=-Wl,-z,max-page-size=16384 -C link-arg=-Wl,-soname,libmadmom_beats_port_ffi.so
         run: |
           cargo install cargo-ndk --locked --version 3.5.4
           cd rust
-          cargo ndk -t arm64-v8a -t armeabi-v7a -t x86_64 -o ../dist/madmom-beats-port-${VERSION}/android build -p rhythm_ffi --release
+          cargo ndk -t arm64-v8a -t armeabi-v7a -t x86_64 -o ../dist/madmom-beats-port-${VERSION}/android build -p madmom_beats_port_ffi --release
       - name: Verify Android ELF 16 KB page-size compatibility
         run: |
           tools/verify_16kb_android.sh dist/madmom-beats-port-${VERSION}/android
       - name: Collect Android artifacts
         run: |
-          cp rust/rhythm_ffi/include/rhythm.h dist/madmom-beats-port-${VERSION}/android/
+          cp rust/madmom_beats_port_ffi/include/madmom_beats_port.h dist/madmom-beats-port-${VERSION}/android/
           cp -R models dist/madmom-beats-port-${VERSION}/android/models
       - uses: actions/upload-artifact@v4
         with:
